# asmlings

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  IMPROVEMENTS.md  README.md
.cargo/: config.toml
.github/workflows/: release.yml
exercises/: 01_bare_metal.asm  02_halves.asm  03_addition.asm  04_subtraction.asm  05_reg_to_reg.asm  06_bitwise_and.asm  07_bitwise_or.asm  08_xor.asm  09_shift_left.asm  10_stack.asm  11_bitwise_not.asm  12_shift_right.asm  13_inc_dec.asm  14_mul.asm  15_div.asm  16_neg.asm  17_cmp.asm  18_loop.asm  19_read_mem.asm  20_write_mem.asm  21_reg_ind_address.asm  22_source_index.asm  23_subroutines.asm  24_xvhg.asm  25_carry_flag.asm  26_bit_ceck.asm  27_pusha_popa.asm  28_sign_comp.asm  29_rol.asm  30_test_1.asm  31_test_2.asm  32_test_3.asm
src/: assembler.rs  commands.rs  constants.rs  emulator.rs  exercise.rs  exercise_tests.rs  harness.rs  hints.rs  main.rs  state.rs  tests.rs  ui.rs  utils.rs
template_exercises/: 01_bare_metal.asm  02_halves.asm  03_addition.asm  04_subtraction.asm  05_reg_to_reg.asm  06_bitwise_and.asm  07_bitwise_or.asm  08_xor.asm  09_shift_left.asm  10_stack.asm  11_bitwise_not.asm  12_shift_right.asm  13_inc_dec.asm  14_mul.asm  15_div.asm  16_neg.asm  17_cmp.asm  18_jmp.asm  18_loop.asm  19_jz.asm  19_read_mem.asm  20_loop.asm  20_write_mem.asm  21_read_mem.asm  21_reg_ind_address.asm  22_source_index.asm  22_write_mem.asm  23_reg_ind_address.asm  23_subroutines.asm  24_source_index.asm  24_xchg.asm  25_carry_flag.asm  25_subroutines.asm  26_bit_check.asm  26_xchg.asm  27_carry_flag.asm  27_pusha_popa.asm  28_bit_check.asm  28_sign_comp.asm  29_pusha_popa.asm  (+15 more)
