[package]
authors = ["Giacomo Folli <giacomofolli@proton.me>"]
name = "asmlings"
version = "0.1.9"
edition = "2024"
description = "An educational sandbox for Intel 8086 assembly"
readme = "README.md"
repository = "https://github.com/giacomo-folli/asmlings"
homepage = "https://github.com/giacomo-folli/asmlings"
license = "MIT OR Apache-2.0"
keywords = ["assembly", "edu", "cli"]
categories = ["command-line-utilities"]


[[bin]]
name = "asmlings"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
unicorn-engine = { version = "2.1.5", default-features = false, features = ["arch_x86"] }
anyhow = "1"
libc = "0.2"
notify = "6.1"
rust-embed = "8.3"

[dev-dependencies]
tempfile = "3.10"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/asmlings-{ target }{ binary-ext }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "bin"
